<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/activity_show_result"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tirza.soutetirza_pset3.ShowResult">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/noResults"
            android:visibility="invisible"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:id="@+id/noResults" />

        <TextView
            android:text="@string/title"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_toStartOf="@+id/showPoster"
            android:layout_toLeftOf="@+id/showPoster"
            android:id="@+id/showTitle" />

        <TextView
            android:text="@string/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/showTitle"
            android:layout_alignLeft="@+id/showTitle"
            android:layout_alignStart="@+id/showTitle"
            android:layout_marginTop="10dp"
            android:id="@+id/showYear" />

        <TextView
            android:text="@string/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/showYear"
            android:layout_alignLeft="@+id/showTitle"
            android:layout_alignStart="@+id/showTitle"
            android:layout_marginTop="10dp"
            android:id="@+id/showDirector" />

        <TextView
            android:text="@string/actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/showTitle"
            android:layout_alignStart="@+id/showTitle"
            android:paddingTop="75dp"
            android:layout_below="@id/showDirector"
            android:id="@+id/showActors" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/showTitle"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/showPoster" />

        <TextView
            android:text="@string/plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:layout_below="@id/showActors"
            android:layout_marginTop="35dp"
            android:id="@+id/showPlot" />

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="saveMovie"
            android:id="@+id/saveMovie" />
    </RelativeLayout>
</ScrollView>